[package]
name = "gear-test-refactored"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
gear-core = { path = "../core" }

serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json = "1.0.72"
primitive-types = { version = "0.1.5", features = ["serde"] }
hex = "0.4"
