[package]
name = "gear-feeds-router"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gstd = { path = "../../gstd", features = ["debug"] }

primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"]}
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
