[package]
name = "gear-feeds-channel"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gstd = { path = "../../../gstd", features = ["debug"] }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
circular_buffer = {git = "https://github.com/breathx/circular-buffer-rs.git", default-features = false }
primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"]}
